--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "ng2-order-pipe": "^0.1.5",
     "ng2-search-filter": "^0.5.1",
     "ngx-cookie-service": "^13.0.1",
+    "ngx-dropzone": "^3.0.0",
     "ngx-image-cropper": "^5.0.1",
     "ngx-moment": "^5.0.0",
     "ngx-pagination": "^5.1.1",
